# shwip

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  biome.json  index.html  package.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
Sources/shwip/: main.swift
docs/: inventory.md  product.md  setup.md  stack.md
src/: App.tsx  categoryIcons.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: cli.rs  error.rs  history.rs  lib.rs  llm.rs  logger.rs  main.rs  menu.rs  models.rs  notifications.rs  scanner.rs  scheduler.rs  settings.rs  trash.rs
src-tauri/src/scanners/: app_residuals.rs  bun_cache.rs  cargo.rs  docker.rs  homebrew.rs  mod.rs  npm_cache.rs  nvm.rs  ollama.rs  playwright.rs  pnpm_cache.rs  python.rs  xcode.rs
src/__tests__/: App.test.tsx  types.test.ts  useFilter.test.ts
src/components/: AutomationView.tsx  CategoryGroup.tsx  CleanFlow.tsx  Dashboard.tsx  ErrorBoundary.tsx  FilterChips.tsx  HistoryView.tsx  ResultItem.tsx  ScanSpinner.tsx  SettingsPanel.tsx  Sidebar.tsx  SpaceDonut.tsx  Sparkline.tsx
src/hooks/: useDarkMode.ts  useFilter.ts  useScanProgress.ts
