[package]
name = "shwip"
version = "0.1.0"
description = "Intelligent Mac cleanup for developers"
authors = ["Maxime Nejad"]
edition = "2021"

[lib]
name = "shwip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "shwip"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
dirs = "6"
