[package]
name = "shwip"
version = "0.1.0"
description = "Intelligent Mac cleanup for developers"
authors = ["Maxime Nejad"]
edition = "2021"

[lib]
name = "shwip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "shwip"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
dirs = "6"
tokio = { version = "1.52.1", features = ["rt"] }
tauri-plugin-store = "2.4.2"
trash = "5.2.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.0"
clap = { version = "4.6.1", features = ["derive"] }
